  * Bump up Debhelper compatibility level to 5.
  * Only ship README.Debian in libglib2.0-dev.
  * Empty dependency_libs in the *.la files of libglib2.0-dev.
  * Override shlibs for the inter-shlibdeps before computing them.
  * Use >= ${source:Version} and ${binary:Version} for inder-deps; build-dep
    on dpkg-dev >= 1.13.19.
  * Fix --dbg-package name.

 -- Loic Minier <lool@dooz.org>  Thu,  8 Mar 2007 17:31:35 +0100

glib2.0 (2.12.9-2) experimental; urgency=low

  * Bump shlibs to >= 2.12.9.
  * Avoir overwriting the *.la files of the main build with the *.la files of
    the udeb build; fixes "old_library" in *.la files; thanks Tim Dijkstra;
    closes: #297741.

 -- Loic Minier <lool@dooz.org>  Sat, 20 Jan 2007 09:13:40 +0100

glib2.0 (2.12.9-1) experimental; urgency=low

  * Add a get-orig-source target to retrieve the upstream tarball.
  * New upstream releases; no API change.
    - Fixes documentation of g_key_file_set_string_list(); closes: #405028.
    - Avoids spewing warnings with gcc 2.95; closes: #303124.
    - Drop patch 009_accept-space-in-key-names; merged and adapted upstream.

 -- Loic Minier <lool@dooz.org>  Wed, 17 Jan 2007 08:55:27 +0100

glib2.0 (2.12.7-1) experimental; urgency=low

  * New upstream release; no API change; translation updates, bug fixes,
    build fixes.
    - Target at experimental for now.
    - Drop patch 010_restore-old-key-file-syntax-support, merged and adapted
      upstream.

 -- Loic Minier <lool@dooz.org>  Fri,  5 Jan 2007 12:24:38 +0100

glib2.0 (2.12.6-2) unstable; urgency=medium

  * New patch, 010_restore-old-key-file-syntax-support, reverts strict group
    names and key names checks introduced between glib 2.12.4 and 2.12.6;
    instead of failing, critical warnings are output; updates the relevant
    tests as well; closes: #404888.
  * New patch, 009_accept-space-in-key-names, adds support for space in key
    names (independently of 010_restore-old-key-file-syntax-support); updates