@@ -25,12 +25,15 @@ XC-Package-Type: udeb
 Priority: optional
 Architecture: any
 Depends: ${shlibs:Depends}
-Description: The GLib library of C routines
+Description: The GLib library of C routines - minimal runtime
  This is a udeb, or a microdeb, for the debian-installer.
  .
  GLib is a library containing many useful C routines for things such
  as trees, hashes, lists, and strings.  It is a useful general-purpose
  C library used by projects such as GTK+, GIMP, and GNOME.
+ .
+ This package contains the minimal runtime library needed by the Debian
+ installer.
 
 Package: libglib2.0-dev
 Section: libdevel
