@@ -1,4 +1,4 @@
-Source: glib2.0
+Source: glib@APIVER@
 Section: libs
 Priority: optional
 Maintainer: Sebastien Bacher <seb128@debian.org>
@@ -6,11 +6,11 @@ Uploaders: @GNOME_TEAM@
 Build-Depends: debhelper (>> 5.0.22), pkg-config (>= 0.14.0), gettext, autotools-dev, gnome-pkg-tools (>= 0.10), quilt, dpkg-dev (>= 1.13.19)
 Standards-Version: 3.7.2
 
-Package: libglib2.0-@SONAME@
+Package: @SHARED_PKG@
 Section: libs
 Architecture: any
 Depends: ${shlibs:Depends}
-Recommends: libglib2.0-data
+Recommends: @DATA_PKG@
 Conflicts: libpango1.0-0 (<< 1.11)
 Description: The GLib library of C routines
  GLib is a library containing many useful C routines for things such
@@ -19,24 +19,27 @@ Description: The GLib library of C routines
  .
  This package contains the shared libraries.
 
-Package: libglib2.0-udeb
+Package: libglib@APIVER@-udeb
 Section: debian-installer
 XC-Package-Type: udeb
 Priority: optional
 Architecture: any
 Depends: ${shlibs:Depends}
-Description: The GLib library of C routines
+Description: The GLib library of C routines - minimal runtime
  This is a udeb, or a microdeb, for the debian-installer.
  .
  GLib is a library containing many useful C routines for things such
  as trees, hashes, lists, and strings.  It is a useful general-purpose
  C library used by projects such as GTK+, GIMP, and GNOME.
+ .
+ This package contains the minimal runtime library needed by the Debian
+ installer.
 
-Package: libglib2.0-dev
+Package: @DEV_PKG@
 Section: libdevel
 Architecture: any
-Depends: libglib2.0-@SONAME@ (= ${binary:Version}), pkg-config (>= 0.14.0)
-Suggests: libglib2.0-doc
+Depends: @SHARED_PKG@ (= ${binary:Version}), pkg-config (>= 0.14.0)
+Suggests: @DOC_PKG@
 Replaces: libglib1.3-dev
 Conflicts: libglib1.3-dev
 Description: Development files for the GLib library
@@ -44,15 +47,15 @@ Description: Development files for the GLib library
  as trees, hashes, lists, and strings.  It is a useful general-purpose
  C library used by projects such as GTK+, GIMP, and GNOME.
  .
- This package is needed to compile programs against libglib2.0-@SONAME@,
+ This package is needed to compile programs against @SHARED_PKG@,
  as only it includes the header files and static libraries (optionally)
  needed for compiling.
 
-Package: libglib2.0-@SONAME@-dbg
+Package: @DEBUG_PKG@
 Section: libdevel
 Priority: extra
 Architecture: any
-Depends: libglib2.0-@SONAME@ (= ${binary:Version})
+Depends: @SHARED_PKG@ (= ${binary:Version})
 Conflicts: libglib2.0-dbg
 Replaces: libglib2.0-dbg
 Description: The GLib libraries and debugging symbols
@@ -67,10 +70,10 @@ Description: The GLib libraries and debugging symbols
  LD_LIBRARY_PATH.
  Most people will not need this package.
 
-Package: libglib2.0-data
+Package: @DATA_PKG@
 Section: misc
 Architecture: all
-Depends: libglib2.0-@SONAME@ (>= ${source:Version})
+Depends: @SHARED_PKG@ (>= ${source:Version})
 Replaces: libglib1.3, libglib1.3-data
 Conflicts: libglib1.3-data
 Description: Common files for GLib library
@@ -81,7 +84,7 @@ Description: Common files for GLib library
  This package is needed for the runtime libraries to display messages in
  languages other than English.
 
-Package: libglib2.0-doc
+Package: @DOC_PKG@
 Section: doc
 Architecture: all
 Depends: lynx | www-browser
@@ -94,5 +97,5 @@ Description: Documentation files for the GLib library
  C library used by projects such as GTK+, GIMP, and GNOME.
  .
  This package contains the HTML documentation for the GLib library
- in /usr/share/doc/libglib2.0-doc/ .
+ in /usr/share/doc/@DOC_PKG@/ .
 
